--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body{
+  margin: 0;
+  padding: 0;
+}
+.grid{
+  grid-template-columns: repeat(auto-fill, minmax(400px, 2fr));
+}
 .main-container {
   height: 100vh;
 }
@@ -7,26 +14,42 @@
   height: 100%;
   padding-top: 2.5rem;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 .routes {
   display: flex;
+  width: 80%;
+  /* justify-content: center; */
   flex-direction: column;
-  gap: 1.6rem;
-  padding-left: 2.5rem;
+  gap: 1.5rem;
 }
 
 .link {
   display: flex;
-  gap: 24px;
-  padding: 5px 10px;
-  text-decoration: none;
-  border: 4px solid transparent;
-  transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  padding: 10px;
+  justify-content: space-between;
+  flex-direction: row;
+  /* gap: px; */
+  padding: 15px 10px;
+  /* border: 4px solid transparent; */
+  
+  /* transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045); */
 }
-.link.active .link_text {
+.navelink{
+  
+}
+.icon{
+  padding-right: 15px;
+}
+.link:hover{
+  background-color: rgba(0, 71, 255, 0.1);
+  border-radius: 8px;
+}
+.linkN.active  .link_text {
   color: #0047ff;
 }
-.link.active .icon svg {
+.linkN.active .icon svg {
   fill: #0047ff;
 }
 .link_text {
@@ -35,7 +58,9 @@
   color: #787878;
   font-family: "EuclidMedium";
 }
-
+.pluse.active .link_text{
+  color: #0047ff  ;
+}
 .menu {
   display: flex;
   color: white;
@@ -93,42 +118,55 @@
   padding: 10px;
   margin: 10px;
 }
-.saveasbtn {
-  /* border: 1px solid; */
-  width: 190px;
-  height: 59px;
+.unActivebtn {
+  width: 9.25rem;
+  height: 3.125rem;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
   color: #0047ff;
-
   background-color: #ffffff;
   font-family: EuclidMedium;
   font-size: 16px;
-}
-.bor {
   border: 1px solid #0047ff;
-}
-.archive-Draft {
-  color: #0047ff;
-  background-color: #ffffff;
-  border: none;
   cursor: pointer;
 }
-.BtnHead {
-  position: absolute;
-  top: 180;
+
+.activeBtn {
+  width: 9.25rem;
+  height: 3.125rem;
   display: flex;
-  flex-direction: column;
-  gap: 10;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-.border {
-  width: 190px;
-  height: 2px;
-  background-color: black;
-  opacity: 0.1;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  color: #ffffff;
+  background-color: #0047ff;
+  font-family: EuclidMedium;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid #ffffff;
 }
 
-/* model */
+.popupbtns {
+  height: 3.125rem;
+  width: 17rem;
+}
+
+.popupbtn{
+  width: 8.75rem;
+  height: 100%;
+  background-color: #0047ff;
+  border: none;
+  color: #ffffff;
+  border-radius: 5px;
+  font-size: 16px;
+  font-family: EuclidMedium;
+}
+.colour{
+  color: #7A7A7A;
+  background-color: #F5F5F5 ;
+}
+.cursor {
+  cursor: pointer;
+}
