--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-body{
+*{
   margin: 0;
   padding: 0;
+}
+.app-container {
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  height: 100vh; /* Set the height of the container */
 }
 .grid{
   grid-template-columns: repeat(auto-fill, minmax(400px, 2fr));
@@ -25,24 +30,38 @@ body{
   gap: 1.5rem;
 }
 
+.link_container {
+  display: flex;
+  padding-right: 5px;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  /* gap: px; */
+  /* padding: 15px 10px; */
+  /* border: 4px solid transparent; */
+  
+  /* transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045); */
+}
 .link {
   display: flex;
   padding: 10px;
   justify-content: space-between;
   flex-direction: row;
+  text-decoration: none;
   /* gap: px; */
-  padding: 15px 10px;
+  padding: 15px 90px 15px 10px;
+  /* padding-right: 50; */
+  /* margin-right: 50px; */
   /* border: 4px solid transparent; */
   
   /* transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045); */
 }
-.navelink{
-  
-}
+
 .icon{
   padding-right: 15px;
 }
-.link:hover{
+.link_container:hover{
   background-color: rgba(0, 71, 255, 0.1);
   border-radius: 8px;
 }
@@ -54,9 +73,13 @@ body{
 }
 .link_text {
   white-space: nowrap;
+  width: 100%;
   font-size: 18px;
   color: #787878;
   font-family: "EuclidMedium";
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 .pluse.active .link_text{
   color: #0047ff  ;
