--- a/src/styles/overviewpage.css
+++ b/src/styles/overviewpage.css
@@ -1,4 +1,3 @@
-
 .dashboardcontainer{
     width: 100%;
     background-color: #EFF2F4;
@@ -151,6 +150,8 @@
     padding: 1.3rem 0;
     border-bottom: 1px solid #0000001A;
 }
+
+
 .col1{
     width:19%
 }
@@ -162,6 +163,22 @@
 }
 .col4{
     width:27%
+}
+
+.avg-col1{
+    width: 20%
+}
+.avg-col2{
+    width: 40%
+}
+.avg-col3{
+    width: 40%
+}
+.filter-btn{
+    
+    background-color: #F5F5F5;
+    padding: 0.3rem 0.4rem;
+    border-radius: 7px;
 }
 
 
@@ -193,6 +210,11 @@
     display: flex;
     margin: 1.3rem 0;
 }
+.average-maximize{
+    position: absolute;
+    top:1rem;
+    right: 1rem;
+}
 .goal-item-icon{
     width: 47px;
     height: 45px;
@@ -221,6 +243,15 @@
     font-size: 1rem;
     border: solid 1px #0000001A;
     transition: all 0.3s ease-in-out;
+}
+.goalfield-col1{
+    width: 60%;
+}
+.goalfield-col2{
+    width: 40%;
+}
+.goaldropdown{
+    color:#787878;
 }
 .cancel-btn{
     cursor: pointer;
@@ -354,6 +385,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
+    position: relative;
 }
 .doughnutlabels{
     display: flex;
