--- a/src/styles/AdminLogin.css
+++ b/src/styles/AdminLogin.css
@@ -59,7 +59,12 @@
 }
 .forgot-password-text{
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
+    
+}
+.rememberme{
+    color: #787878;
+    font-size: 18.37px;
 }
 
 .password-container{
@@ -71,7 +76,7 @@
     font-size: 1rem;
     padding: 0 1rem;
     height: 58px;
-    margin: 0 0 0.5rem 0;
+    margin: 0 0 1rem 0;
 }
 
 .cancel-btn{
